--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <label for="inputEmail">E-Mail</label>
                 <input type="email" id="inputEmail" aria-describedby="emailHelp" placeholder="max.mustermann@max.de">
                 <label for="inputQuestion">Nachricht</label>
-                <textarea id="inputQuestion" rows="3" placeholder="Ihre Nachricht"></textarea>
+                <textarea id="inputQuestion" rows="5" placeholder="Ihre Nachricht"></textarea>
                 <button type="submit">Senden Sie</button>
               </form>
             </div>
@@ -299,6 +299,18 @@
       </div>
     </div>
   </footer>
+
+  <div class="copyright">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="copyright-inner">
+            <p>© Sorgatz Immobiliengesellschaft mbH 2025  |  Konzept & Design: <a href="#" rel="nofollow">www.olchin.de</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
