--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -25,22 +25,22 @@
           <div class="header-inner">
             <nav class="navbar">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#" class="head-logo">
+                <a class="navbar-brand" href="index.html" class="head-logo">
                   <img src="img/logo.svg" alt="Logo">
                 </a>
                 <div class="header-panel">
                   <ul>
                     <li><a href="#">Unternehmen</a></li>
                     <li><a href="#">Service</a></li>
-                    <li><a href="#">Immobilien</a></li>
+                    <li><a href="https://sorgatz-next.vercel.app/" target="_blank">Immobilien</a></li>
                     <li><a href="#">Kontakt</a></li>
                   </ul>
-                  <button class="flat-counter">
-                    0
+                  <a href="auswahl.html" class="flat-counter">
+                    <span class="flat-counter_item">0</span>
                     <img src="img/icons/home.svg" alt="flats">
-                  </button>
+                  </a>
                   <div class="login-panel">
-                    <button><img src="img/icons/profile.svg" alt="login"></button>
+                    <a href="login.html"><img src="img/icons/profile.svg" alt="login"></a>
                   </div>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -53,7 +53,7 @@
                       <li><a href="#">Startseite</a></li>
                       <li><a href="#">Unternehmen</a></li>
                       <li><a href="#">Service</a></li>
-                      <li><a href="#">Immobilien</a></li>
+                      <li><a href="https://sorgatz-next.vercel.app/" target="_blank">Immobilien</a></li>
                       <li><a href="#">Kontakt</a></li>
                     </ul>
                     <ul>
@@ -93,16 +93,16 @@
         <div class="col-12">
           <div class="footer-inner">
             <div class="footer-item">
-              <a href="#" class="footer-logo">
+              <a href="index.html" class="footer-logo">
                 <img src="img/footer_logo.svg">
               </a>
             </div>
             <div class="footer-item">
               <p>Sorgatz Immobiliengesellschaft mbH</p>
-              <p>Hirsauer Strasse 147, 75180 Pforzheim</p>
-              <p>Tel. <a href="#">+49 7231 46 26 740</a></p>
-              <p>Fax <a href="#">+49 7231 46 29 997</a></p>
-              <p>E-Mail <a href="#">mail@domain.de</a></p>
+              <p><a href="https://www.google.com/maps/place/Hirsauer+Str.+147,+75180+Pforzheim,+Deutschland/@48.8739064,8.6746424,17z/data=!4m6!3m5!1s0x47976df4e07fa589:0xfea77d4daa52ced0!8m2!3d48.8739029!4d8.6772173!16s%2Fg%2F11b8zhwr9q?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D" target="_blank"></a>Hirsauer Strasse 147, 75180 Pforzheim</p>
+              <p>Tel. <a href="tel:+49 7231 46 26 740">+49 7231 46 26 740</a></p>
+              <p>Fax <a href="tel:+49 7231 46 29 997">+49 7231 46 29 997</a></p>
+              <p>E-Mail <a href="mailto:mail@domain.de">mail@domain.de</a></p>
             </div>
             <div class="footer-item">
               <div class="footer-item_unternehmen">
@@ -116,9 +116,9 @@
               <div class="footer-item_rechtliches">
                 <h4>Rechtliches</h4>
                 <ul>
-                  <li><a href="#">AGB</a></li>
-                  <li><a href="#">Datenschutz</a></li>
-                  <li><a href="#">Impressum</a></li>
+                  <li><a href="agb.html">AGB</a></li>
+                  <li><a href="datenschutz.html">Datenschutz</a></li>
+                  <li><a href="impressum.html">Impressum</a></li>
                 </ul>
               </div>
             </div>
@@ -133,7 +133,7 @@
       <div class="row">
         <div class="col-12">
           <div class="copyright-inner">
-            <p>© Sorgatz Immobiliengesellschaft mbH 2025  |  Konzept & Design: <a href="#" rel="nofollow">www.olchin.de</a></p>
+            <p>© Sorgatz Immobiliengesellschaft mbH 2025  |  Konzept & Design: <a href="https://olchin.de/" rel="nofollow">www.olchin.de</a></p>
           </div>
         </div>
       </div>
