--- a/index.html
+++ b/index.html
@@ -280,60 +280,63 @@
 
   </main>
 
-  <footer class="footer">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="footer-inner">
-            <div class="footer-item">
-              <a href="index.html" class="footer-logo">
-                <img src="img/footer_logo.svg">
-              </a>
-            </div>
-            <div class="footer-item">
-              <p>Sorgatz Immobiliengesellschaft mbH</p>
-              <p><a href="https://www.google.com/maps/place/Hirsauer+Str.+147,+75180+Pforzheim,+Deutschland/@48.8739064,8.6746424,17z/data=!4m6!3m5!1s0x47976df4e07fa589:0xfea77d4daa52ced0!8m2!3d48.8739029!4d8.6772173!16s%2Fg%2F11b8zhwr9q?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D" target="_blank"></a>Hirsauer Strasse 147, 75180 Pforzheim</p>
-              <p>Tel. <a href="tel:+49 7231 46 26 740">+49 7231 46 26 740</a></p>
-              <p>Fax <a href="tel:+49 7231 46 29 997">+49 7231 46 29 997</a></p>
-              <p>E-Mail <a href="mailto:mail@domain.de">mail@domain.de</a></p>
-            </div>
-            <div class="footer-item">
-              <div class="footer-item_unternehmen">
-                <h4>Unternehmen</h4>
-                <ul>
-                  <li><a href="#">Über uns</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Immobilienangebote</a></li>
-                </ul>
+
+  <div class="footer-wrapper">
+    <footer class="footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="footer-inner">
+              <div class="footer-item">
+                <a href="index.html" class="footer-logo">
+                  <img src="img/footer_logo.svg">
+                </a>
               </div>
-              <div class="footer-item_rechtliches">
-                <h4>Rechtliches</h4>
-                <ul>
-                  <li><a href="agb.html">AGB</a></li>
-                  <li><a href="datenschutz.html">Datenschutz</a></li>
-                  <li><a href="impressum.html">Impressum</a></li>
-                </ul>
+              <div class="footer-item">
+                <p>Sorgatz Immobiliengesellschaft mbH</p>
+                <p><a href="https://www.google.com/maps/place/Hirsauer+Str.+147,+75180+Pforzheim,+Deutschland/@48.8739064,8.6746424,17z/data=!4m6!3m5!1s0x47976df4e07fa589:0xfea77d4daa52ced0!8m2!3d48.8739029!4d8.6772173!16s%2Fg%2F11b8zhwr9q?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D" target="_blank"></a>Hirsauer Strasse 147, 75180 Pforzheim</p>
+                <p>Tel. <a href="tel:+49 7231 46 26 740">+49 7231 46 26 740</a></p>
+                <p>Fax <a href="tel:+49 7231 46 29 997">+49 7231 46 29 997</a></p>
+                <p>E-Mail <a href="mailto:mail@domain.de">mail@domain.de</a></p>
+              </div>
+              <div class="footer-item">
+                <div class="footer-item_unternehmen">
+                  <h4>Unternehmen</h4>
+                  <ul>
+                    <li><a href="#">Über uns</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Immobilienangebote</a></li>
+                  </ul>
+                </div>
+                <div class="footer-item_rechtliches">
+                  <h4>Rechtliches</h4>
+                  <ul>
+                    <li><a href="agb.html">AGB</a></li>
+                    <li><a href="datenschutz.html">Datenschutz</a></li>
+                    <li><a href="impressum.html">Impressum</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
-
-  <div class="copyright">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="copyright-inner">
-            <p>© Sorgatz Immobiliengesellschaft mbH 2025  |  Konzept & Design: <a href="https://olchin.de/" rel="nofollow">www.olchin.de</a></p>
+    </footer>
+  
+    <div class="copyright">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="copyright-inner">
+              <p>© Sorgatz Immobiliengesellschaft mbH 2025  |  Konzept & Design: <a href="https://olchin.de/" rel="nofollow">www.olchin.de</a></p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
 
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
